--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,13 @@
     tools:context=".MainActivity">
 
     <fragment android:name="com.example.my_portfolio.HomeFragment"
-        android:id="@+id/container"
+        android:id="@+id/home_container"
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <fragment android:name="com.example.my_portfolio.HomeFragment"
+        android:id="@+id/birthday_container"
         android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="match_parent" />
